--- a/src/constants/translations/fr.json
+++ b/src/constants/translations/fr.json
@@ -1,55 +1,153 @@
 {
   "common": {
-    
-  },
-  "dates": {
-    "monthNames": [
-      "Janvier",
-      "Février",
-      "Mars",
-      "Avril",
-      "Mai",
-      "Juin",
-      "Juillet",
-      "Août",
-      "Septembre",
-      "Octobre",
-      "Novembre",
-      "Décembre"
-    ],
-    "monthNamesShort": [
-      "Janv.",
-      "Févr.",
-      "Mars",
-      "Avril",
-      "Mai",
-      "Juin",
-      "Juil.",
-      "Août",
-      "Sept.",
-      "Oct.",
-      "Nov.",
-      "Déc."
-    ],
-    "dayNames": [
-      "Dimanche",
-      "Lundi",
-      "Mardi",
-      "Mercredi",
-      "Jeudi",
-      "Vendredi",
-      "Samedi"
-    ],
-    "dayNamesShort": ["Dim.", "Lun.", "Mar.", "Mer.", "Jeu.", "Ven.", "Sam."],
-    "today": "Aujourd'hui"
+    "active":"Active",
+    "verified":"Verified",
+    "view":"View"
+   
   },
   "app": {
     "name": "",
     "fullname": ""
   },
+  "screens":{
+    "home":"Home",
+    "application":"Applications",
+    "identities":"Identities",
+    "manageidentity":"Manage Identity",
+    "profile":"Profile",
+    "account":"Account",
+    "feedback":"Feedback",
+    "myidentities":"My Identities",
+    "managedevice":"Manage Devices"
+
+  },
   "darkMode": "Dark Mode",
   "qrscreen":{
     "qrcodescan":"QR Code Scan",
-    "qrscantext":""
+    "qrscantext":"Scan QR Code to register your mobile phone and start your verification with ImproveID to get your modern passwordless identity credentials.",
+    "alignText":"Align the QR code within the frame to scan.",
+    "orText":"Or enter your code below.",
+    "entercode":"Enter Code",
+    "validate":"Validate",
+    "termofuse":"Terms of Use",
+    "privacypolicy":"Privacy Policy",
+    "continuetext":"By continuing, you are agreeing to our",
+    "andhave":"and have read our"
+  },
+  "validationscreen":{
+    "identityText":"Identity Verification",
+    "selectionText":"Select the type of document you would like to use to verify you",
+    "makesureText":"Make sure document text is legible and images are glare-free",
+    "passport":"Passport",
+    "identitycard":"Identity Card",
+    "certificate":"Certificate + Support Document"
+  },
+  "uploadscreen":{
+    "passportupload":"Passport Photo Page",
+    "frontpage":"Front of the Identity Card",
+    "backpage":"Back of the Identity Card",
+    "birthcertificate":"Birth Certificate",
+    "upload":"Upload file",
+    "takephoto":"Take photo",
+    "subtitle":"Take a photo of the page with your headshot picture",
+    "subtitledoc":"Take a photo of the front of your identity card",
+    "subtitleback":"Take a photo of the back of your identity card",
+    "subtitlecertificate":"Take a photo of the front of your birth certificate",
+    "camratitle":"Identity Verification",
+    "camerainstruction":"Place your passport page",
+    "camerasubinstruction":"Place part of your passport page in the frame.",
+    "camerainstruction1":"Front of driver's license",
+    "camerasubinstruction1":"Position the front of your license in the frame",
+    "camerainstruction2":"Back of driver's license",
+    "camerasubinstruction2":"Position the back of your license in the frame",
+    "camerainstruction3":"Front of Certificate",
+    "camerasubinstruction3":"Position the front of your certificate in the frame"
+  },
+  "readscreen":{
+    "title":"Check Readablity",
+    "subtitle":"Make sure document text is legible and images are glare-free",
+    "subtitledoc":"Make sure your license details are clear to read, with no blur or glare",
+    "subtitlecertificate":"Make sure your certificate details are clear to read, with no blur or glare",
+    "redo":"Redo",
+    "confirm":"Confirm"
+  },
+  "selfiescreen":{
+    "title":"Take a Selfie",
+    "subtitle":"We'll compare the photo in your passport with your selfie",
+    "instruction1":"Please, keep a straight face",
+    "instruction2":"Wearing glasses? Make sure we can clearly see your eyes",
+    "getstarted":"Get Started",
+    "camerasubtitle":"Hold your phone at eye level so that yourself is similar to a passport photo"
+  },
+  "consentsign":{
+    "title":"Consent and Sign",
+    "subtitle":"To complete your verification we require you to accept our terms & conditions and agree to our process of your information.",
+    "instruction1":"By clicking Next, I accept the Terms and Conditions",
+    "instruction2":"I agree to the processing of my personal data, as described in the Consent to Personal Data Processing",
+    "pleasesign":"Please sign below",
+    "signature":"Signature",
+    "clear":"Clear",
+    "next":"Next"
+  },
+  "submitverification":{
+    "title":"Great, that's everything we need",
+    "subtitle":"We're now ready to verify your identity",
+    "doc":"Documents Uploaded",
+    "selfie":"Selfie Uploaded",
+    "signature":"Signature Uploaded",
+    "sumitbtn":"Submit Verification"
+  },
+  "popupmessage":{
+    "success":"Successful!",
+    "successmessage":"Congratulations, you have successfully completed device registration and credential issuance. Please provide your feedback and rating to help us serve you better. Thanks!",
+    "waitingmsg":"Thanks for submitting your information. Your application requires approval. Once it is approved you will be notified with email and sms. If your application is not approved you will also be notified with a rejection reason.",
+    "deletemsg":"Are you sure you want to Suspend your identity? You cannot use your identity after Suspending them. However, if permitted, you can reissue them.",
+    "suspend":"Suspend Identity ",
+    "waiting":"Waiting for Approval",
+    "ok":"Ok",
+    "yes":"Yes",
+    "no":"No"
+  },
+  "applicationscreen":{
+    "searchtext":"Search your app",
+    "office":"Office 365",
+    "box":"Box",
+    "google":"Google"
+  },
+  "myidentities":{
+    "suspend":"Suspend",
+    "revoke":"Revoke"
+  },
+  "feedbackscreen":{
+    "submit":"Submit Feedback"
+  },
+  "detailsscreen":{
+    "screenname":"ImproveID",
+    "status":"Status",
+    "consent":"Consent"
+  },
+  "basicinfoscreen":{
+    "screenname":"Basic Information",
+    "snedverificationcode":"Send Verification Code",
+    "liveText":"Whare do you live?",
+    "numberText":"Mobile number",
+    "rateText":"Message and data rates may apply.",
+    "nameText":"Legal name",
+    "firstname":"First name",
+    "lastname":"Last name"
+  },
+  "moreinfoscreen":{
+    "screenname":"More Information",
+    "address": "Address",
+    "apartment":"+Apartment, building, floor",
+    "city":"City",
+    "state":"State",
+    "zipcode":"ZIP code",
+    "dob": "Date of Birth",
+    "month":"Month",
+    "day":"Day",
+    "year":"Year",
+    "contiue":"Continue"
   }
+
 }
